# benchmark-project

./: .gitignore  readme.md
api/benchmark/: Pipfile  benchmark.py  comprehensive_crud_results.json
api/python/: Pipfile  benchmark.py  models.py  server.py
api/rust/: Cargo.toml  benchmark.db-shm
api/rust/src/: main.rs
api/typescript-node/: benchmark.db-shm  package-lock.json  package.json  tsconfig.json
api/typescript-node/src/: server.ts  server.ts.bak
