[package]
name = "axum-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# HTTP client for benchmarking
reqwest = { version = "0.11", features = ["json"] }

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

